--- a/composer.json
+++ b/composer.json
@@ -1,6 +1,17 @@
 {
+    "name": "marphy/symfony4-skeleton",
     "type": "project",
-    "license": "proprietary",
+    "license": "MIT",
+    "keywords": ["symfony", "skeleton", "webpack"],
+    "description": "Symfony 4.* skeleton with custom webpack and easyadmin bundle",
+    "homepage": "https://github.com/esoft-marphy/symfony4-skeleton",
+    "authors": [
+        {
+            "name": "Marian Abaffy",
+            "email": "abaffy@marphy.sk",
+            "role": "developer"
+        }
+    ],
     "require": {
         "php": "^7.1.3",
         "ext-ctype": "*",
