--- a/config/packages/framework.yaml
+++ b/config/packages/framework.yaml
@@ -1,8 +1,12 @@
 framework:
+    templating:
+        engines: ['php', 'twig']
     secret: '%env(APP_SECRET)%'
     default_locale: en
     csrf_protection: true
     http_method_override: true
+
+    ide: 'phpstorm://open?file=%%f&line=%%l'
 
     session:
         handler_id: ~
