--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,7 +1,5 @@
 parameters:
-    env(DATABASE_URL): 'mysql://dev:dev@127.0.0.1:3306/my_project'
-
-
+    env(DATABASE_URL): 'pgsql://dev:dev@127.0.0.1:5432/dev'
     locale: 'en'
 
 services:
